[gd_scene load_steps=8 format=3 uid="uid://cdg1uganw7jjo"]

[ext_resource type="Script" path="res://script/splash_screen.gd" id="1_eqgd8"]
[ext_resource type="PackedScene" uid="uid://d1e1864cewhou" path="res://scene/scene_control.tscn" id="2_mmpdf"]
[ext_resource type="Texture2D" uid="uid://b1dpolmt0eoro" path="res://images/beautiful woman be398243-5682-435b-9831-74d4aaa16294.jpg" id="2_varbq"]
[ext_resource type="Texture2D" uid="uid://csbxski2bdfjq" path="res://images/patterns-splash-1.png" id="3_nw3tf"]
[ext_resource type="Texture2D" uid="uid://c3r5ec7e7vggm" path="res://images/patterns-splash-2.png" id="4_lsmmm"]

[sub_resource type="Animation" id="Animation_8fgjn"]
resource_name = "fade-in"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(4.6, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Backdrop:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Backdrop/Title1:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.6, 3.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Backdrop/Title2:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2.8, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l48ia"]
_data = {
"fade-in": SubResource("Animation_8fgjn")
}

[node name="SplashScreen" type="Node2D"]
modulate = Color(1, 1, 1, 0)
script = ExtResource("1_eqgd8")

[node name="SceneControl" parent="." instance=ExtResource("2_mmpdf")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l48ia")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0431373, 0.0156863, 0.180392, 1)

[node name="Backdrop" type="TextureRect" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.15
anchor_right = 0.85
anchor_bottom = 1.0
offset_right = 40.0
offset_bottom = 40.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_varbq")
expand_mode = 1

[node name="Title1" type="TextureRect" parent="CanvasLayer/Backdrop"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -348.0
offset_top = -300.0
offset_right = 360.0
offset_bottom = -158.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_nw3tf")

[node name="Title2" type="TextureRect" parent="CanvasLayer/Backdrop"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -325.0
offset_top = -201.0
offset_right = 938.0
offset_bottom = -74.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.25, 0.25)
texture = ExtResource("4_lsmmm")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
